# EdgeLinear

./: .gitignore  CMakeLists.txt  EDPD.ncu-proj  Makefile  config
baseline/: CMakeLists.txt  EDDPmain.cpp  EDLSmain.cpp  EDProcess.cpp  EDProcess.h  EDmain.cpp  Main.cpp
common/: Timer.h  myStruct.h
cpu/: CMakeLists.txt  Config.h  DouglasPeucker.cpp  EdgeDrawing.cpp  EdgeDrawing.h  LinearDis.h  LinearSum.h  common.h  main.cpp
gpu/: CMakeLists.txt  Config.cpp  DouglasPeucker.cu  DouglasPeucker.h  LinearDis.h  LinearSum.cu  Timer.h  main.cpp
inc/: BlockConnect.h  BlockGetFlag.h  BlockLinear.h  BlockPipline.h  BlockWarper.h  CudaUtils.h  DouglasPeucker.h  EDProcess_par.h  EdgeDrawing.h  Linear.h  LinearDis.h  LinearSum.h  Piper.hpp  common.h  configure.h  mainClass.h  myStruct.h
pipeline/: BlockConnect.cpp  BlockConnect.h  BlockGetFlag.cu  BlockGetFlag.h  BlockLinear.cu  BlockLinear.h  BlockPipeline.cpp  BlockPipeline.h  BlockWarper.cpp  BlockWarper.h  CMakeLists.txt  common.h  main.cpp
src/: BlockGetFlag.cu  BlockLinear.cu  BlockPipline.cpp  BlockWarper.cpp  DouglasPeucker.cpp  DouglasPeucker.cu  EDDPmain.cpp  EDLDmain.cpp  EDLSmain.cpp  EDProcess_base.cu  EDkernel.cu  EDmain.cpp  EdgeDrawing.cpp  EdgeDrawing.cu  GaussianKernel.cpp  LinearDis.cpp  LinearDis.cu  LinearSum.cpp  LinearSum.cu  getAll.cu  main.cpp  main.cu  newmain.cpp  normalDP.cpp  smartConnecting.cpp  toLine.cpp  toLine.cu
unittest/: BlockDP.cu  BlockDP.h  BlockGetFlag.cu  BlockGetFlag.h  BlockLinear.cu  CMakeLists.txt  edges_info.cpp  edtest.cpp  gen_base.cpp  getFlag.cpp  getFlag_mod.cpp  linear.cpp  random.cpp
utils/: CMakeLists.txt  CudaQueryDev.cpp  compute.py  imgs2video.cpp  videocat.cpp
